# ia-prompt

./: README.md  pyproject.toml
config/: prompt-generator.yaml
docs/: arquitectura.md
prompts/fragments/: cline-preamble.md  persistence.md  phase-gate.md  plan-multi-agent.md  scope.md  skill-reference.md  stack-dual-ollama.md  stack-ollama-vllm.md  stack-single-ollama.md  tool-format.md  web-fetch-cline.md
prompts/sequences/: 00-index.md  01-research.md  02-implement-simple.md  02-scaffold.md  03-implement.md  03-verify-simple.md  04-verify.md  05-finalize.md
prompts/templates/: bug-fix.md  code-review.md  coding-task.md  repo-exploration.md  security-review.md
src/ia_local_prompt/: __init__.py  analyzer.py  cli.py  config_loader.py  exporters.py  llm_enricher.py  optimizer.py  sequential.py  service.py  skill_selector.py  stack_builder.py  template_engine.py  webapp.py
web/: index.html
web/static/: app.js  style.css
