[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-local-prompt"
version = "0.1.0"
description = "Generador de prompts optimizados para agentes locales (Cline/Continue)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
ia-prompt = "ia_local_prompt.cli:app"
ia-prompt-web = "ia_local_prompt.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]
